--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.incedo</groupId>
-	<artifactId>smart-inventory</artifactId>
+	<artifactId>Smart-Inventory</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>smart-inventory</name>
+	<name>Smart_Inventory</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -33,24 +33,21 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-		      <groupId>org.projectlombok</groupId>
-		      <artifactId>lombok</artifactId>
-		      <optional>true</optional>
-    	</dependency>
-		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>  
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-webmvc</artifactId>
-		</dependency>
+		      <groupId>org.projectlombok</groupId>
+		      <artifactId>lombok</artifactId>
+		      <optional>true</optional>
+    	</dependency>	
 	</dependencies>
 
 	<build>
