--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +22,8 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.1.0",
+    "react-pro-sidebar": "^0.5.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "reactfire": "^4.2.2",
