--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +19,7 @@
     "firebase": "^9.20.0",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
