--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:postgresql://db.sbxwvwoqutddwytunurc.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=FldR237jpe2N27WA
+spring.datasource.url=jdbc:postgresql://db.sbxwvwoqutddwytunurc.supabase.co:5432/postgres?user=postgres&password=FldR237jpe2N27WA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
