--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,10 +11,11 @@
 	<groupId>com.incedo</groupId>
 	<artifactId>Smart-Inventory</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>Smart_Inventory</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -47,18 +48,14 @@
 		      <groupId>org.projectlombok</groupId>
 		      <artifactId>lombok</artifactId>
 		      <optional>true</optional>
-    	</dependency>	
+    	</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
