--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -14,9 +14,8 @@
 	<packaging>jar</packaging>
 	<name>Smart_Inventory</name>
 	<description>Demo project for Spring Boot</description>
-	<packaging>jar</packaging>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,19 +43,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<dependency>
 		      <groupId>org.projectlombok</groupId>
 		      <artifactId>lombok</artifactId>
 		      <optional>true</optional>
-    	</dependency>
+    	</dependency>	
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
